--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head style="background-color: none;">
     <meta charset="UTF-8" />
-    <title>FMM</title>
-
+    <title>Fondation Bilingue Maguerte Marquez</title>
   </head>
-  <body>
+  <body style="display: flex; flex-direction: column; justify-content: center;  align-items: center">
     <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
+    <p>Welcome to your FBMM.</p>
   </body>
 </html>
